--- a/MyMvcProject/MyMvcProject/Views/Home/Index.cshtml
+++ b/MyMvcProject/MyMvcProject/Views/Home/Index.cshtml
@@ -3,4 +3,4 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Hello Azure After Auto deployment</h2>
+<h2>Hello Azure After Auto deployment @DateTime.Now</h2>
